[package]
name = "lau-quantum-topology"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-quantum-topology"
description = "Topological quantum computing for agent reasoning — anyons, braids, TQFT, and modular tensor categories"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }

[dev-dependencies]
